--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,11 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.poppins {
+  font-family: var(--var-poppins);
+}
+
+.box-shadow {
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.307);
+}
